--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         }
 
         function init() {
-            const saved = localStorage.getItem('acnh_bingo_final_v10');
+            const saved = localStorage.getItem('acnh_bingo_final_v11');
             if (saved) { state = JSON.parse(saved); renderAll(); } 
             else { generateNewGrid(); }
             const datalist = document.getElementById('villagerNames');
@@ -188,7 +188,7 @@
             });
         }
 
-        function save() { localStorage.setItem('acnh_bingo_final_v10', JSON.stringify(state)); }
+        function save() { localStorage.setItem('acnh_bingo_final_v11', JSON.stringify(state)); }
 
         const input = document.getElementById('excludeInput');
         input.addEventListener('keypress', (e) => {
@@ -230,10 +230,11 @@
                 if (cell.isFree) card.classList.add('free-space');
                 if (cell.marked) card.classList.add('marked');
 
-                const apiName = cell.name.toLowerCase().replace(/['\s\.]/g, '_').replace('agent_s', 'agents').replace('big_top', 'bigtop');
+                // Reliable Nookipedia URL pattern
+                const wikiName = cell.name.replace(/\s+/g, '_');
                 const imgSrc = cell.isFree ? 
                     "https://www.animal-crossing.com/new-horizons/assets/img/global/logos/logo-acnh-en.png" : 
-                    `https://acnhapi.com/v1/icons/${apiName}`;
+                    `https://nookipedia.com/w/images/thumb/a/af/${wikiName}_NH.png/150px-${wikiName}_NH.png`;
 
                 card.innerHTML = `<img class="villager-img" src="${imgSrc}" onerror="this.src='https://dodo.ac/np/images/thumb/a/af/NH_Villager_Icon_List.png/100px-NH_Villager_Icon_List.png'"><div class="villager-name">${cell.name}</div>`;
 
