--- a/index.html
+++ b/index.html
@@ -61,18 +61,10 @@
             border: 3px dashed #888;
             color: #666;
         }
-        .free-space.marked {
-            background-color: var(--accent-green);
-            border: 3px solid #5db689;
-            color: white;
-        }
-        .free-space-text {
-            font-size: clamp(0.8rem, 2.5vh, 1.5rem);
-            font-weight: 900;
-        }
+        .free-space.marked { background-color: var(--accent-green); border: 3px solid #5db689; color: white; }
+        .free-space-text { font-size: clamp(0.8rem, 2.5vh, 1.5rem); font-weight: 900; }
         
         .sidebar { width: 260px; height: 100%; display: flex; flex-direction: column; flex-shrink: 0; }
-
         .exclusion-panel {
             background: var(--panel-bg); padding: 15px; border-radius: 15px;
             box-shadow: 0 8px 32px rgba(0,0,0,0.1); backdrop-filter: blur(8px);
@@ -80,25 +72,12 @@
             flex-direction: column; height: 100%; box-sizing: border-box;
         }
 
-        .exclusion-panel input { 
-            padding: 10px; border-radius: 8px; border: 2px solid #555; 
-            width: 100%; font-size: 1rem; box-sizing: border-box;
-            margin-bottom: 10px;
-        }
-
+        .exclusion-panel input { padding: 10px; border-radius: 8px; border: 2px solid #555; width: 100%; box-sizing: border-box; margin-bottom: 10px; }
         .chip-container { display: flex; flex-direction: column; gap: 8px; overflow-y: auto; flex-grow: 1; }
-        .chip { 
-            background: #d9534f; color: white; padding: 10px; border-radius: 8px; 
-            font-size: 0.9em; cursor: pointer; display: flex; justify-content: space-between; align-items: center;
-        }
-
+        .chip { background: #d9534f; color: white; padding: 10px; border-radius: 8px; font-size: 0.9em; cursor: pointer; display: flex; justify-content: space-between; align-items: center; }
         .controls { display: flex; flex-direction: column; gap: 8px; margin-top: 10px; }
         
-        button { 
-            padding: 12px; border: none; border-radius: 20px; color: white; 
-            font-size: 0.9rem; cursor: pointer; font-weight: bold; 
-            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-        }
+        button { padding: 12px; border: none; border-radius: 20px; color: white; font-size: 0.9rem; cursor: pointer; font-weight: bold; box-shadow: 0 4px 8px rgba(0,0,0,0.15); }
         .btn-refresh { background-color: #4b8b6a; }
         .btn-reset { background-color: #666; }
 
@@ -112,10 +91,9 @@
 
     <div class="main-container">
         <div id="villagerGrid" class="grid"></div>
-
         <div class="sidebar">
             <div class="exclusion-panel">
-                <strong style="margin-bottom: 5px;">Exclusions:</strong>
+                <strong>Exclusions:</strong>
                 <input type="text" id="excludeInput" placeholder="Name + Enter..." list="villagerNames">
                 <datalist id="villagerNames"></datalist>
                 <div id="chipContainer" class="chip-container"></div>
@@ -128,7 +106,7 @@
     </div>
 
     <script>
-        const allVillagers = ["Ace", "Admiral", "Agent S", "Agnes", "Al", "Alfonso", "Alice", "Alli", "Amelia", "Anabelle", "Anchovy", "Angus", "Anicotti", "Ankha", "Annalisa", "Annalise", "Antonio", "Apollo", "Apple", "Astrid", "Audie", "Aurora", "Ava", "Avery", "Axel", "Azalea", "Baabara", "Bam", "Bangle", "Barold", "Bea", "Beardo", "Beau", "Becky", "Bella", "Benedict", "Benjamin", "Bertha", "Bettina", "Bianca", "Biff", "Big Top", "Bill", "Billy", "Biskit", "Bitty", "Blaire", "Blanche", "Bluebear", "Bob", "Bonbon", "Bones", "Boomer", "Boone", "Boots", "Boris", "Boyd", "Bree", "Broccolo", "Broffina", "Bruce", "Bubbles", "Buck", "Bud", "Bunnie", "Butch", "Buzz", "Cally", "Camofrog", "Canberra", "Candi", "Carmen", "Caroline", "Carrie", "Cashmere", "Celia", "Cephalobot", "Cesar", "Chadder", "Chai", "Charlise", "Cheri", "Cherry", "Chevre", "Chief", "Chops", "Chow", "Chrissy", "Claude", "Claudia", "Clay", "Cleo", "Clyde", "Coach", "Cobb", "Coco", "Cole", "Colton", "Cookie", "Cousteau", "Crackle", "Croque", "Cube", "Curlos", "Curly", "Curt", "Cyd", "Cyrano", "Daisy", "Deena", "Deirdre", "Deli", "Derwin", "Diana", "Diva", "Dizzy", "Dobie", "Doc", "Dom", "Dora", "Dotty", "Drago", "Drake", "Drift", "Ed", "Egbert", "Elise", "Ellie", "Eloise", "Elvis", "Erik", "Etoile", "Eugene", "Eunice", "Faith", "Fang", "Fauna", "Felicity", "Filbert", "Fillip", "Finley", "Flick", "Flora", "Flurry", "Francine", "Frank", "Freckles", "Freya", "Friga", "Frita", "Frobert", "Fuchsia", "Gabi", "Gala", "Gaston", "Gayle", "Genji", "Gigi", "Gladys", "Gloria", "Goldie", "Gonzo", "Goose", "Graham", "Greta", "Grizzly", "Groucho", "Gruff", "Gwen", "Hamlet", "Hamphrey", "Hans", "Harry", "Hazel", "Henry", "Hippeux", "Hopkins", "Hopper", "Hornsby", "Huck", "Hugh", "Iggly", "Ike", "Ione", "Jacob", "Jacques", "Jambette", "Jay", "Jeremiah", "Jitters", "Joey", "Judy", "Julia", "Julian", "June", "Kabuki", "Katt", "Keaton", "Ken", "Ketchup", "Kevin", "Kid Cat", "Kidd", "Kiki", "Kitt", "Kitty", "Klaus", "Knox", "Kody", "Kyle", "Leonardo", "Leopold", "Lily", "Limberg", "Lionel", "Lobo", "Lolly", "Lopez", "Louie", "Lucha", "Lucky", "Lulu", "Lyman", "Mac", "Maddie", "Maelle", "Maggie", "Mallary", "Maple", "Marcel", "Marcie", "Margie", "Marina", "Marshal", "Mary", "Mathilda", "Megan", "Melba", "Merengue", "Merry", "Midge", "Mint", "Mira", "Miranda", "Mitzi", "Moe", "Molly", "Monique", "Monty", "Moose", "Mott", "Muffy", "Murphy", "Nan", "Nana", "Naomi", "Nate", "Nibbles", "Norma", "O'Hare", "Octavian", "Olaf", "Olive", "Olivia", "Opal", "Ozzie", "Pancetti", "Pango", "Paolo", "Papi", "Pashmina", "Pate", "Patty", "Paula", "Peaches", "Peanut", "Pecan", "Peck", "Peewee", "Peggy", "Pekoe", "Penelope", "Petri", "Phoebe", "Pierce", "Pietro", "Pinky", "Piper", "Pippy", "Plucky", "Pompom", "Poppy", "Portia", "Prince", "Puck", "Puddles", "Pudge", "Punchy", "Purrl", "Queenie", "Quillson", "Quinn", "Raddle", "Rasher", "Raymond", "Renée", "Reneigh", "Rex", "Rhonda", "Ribbot", "Ricky", "Rilla", "Rizzo", "Roald", "Robin", "Rocco", "Rocket", "Rod", "Rodeo", "Rodney", "Rolf", "Rooney", "Rory", "Roscoe", "Rosie", "Rowan", "Ruby", "Rudy", "Sasha", "Sally", "Samson", "Sandy", "Savannah", "Scoot", "Shari", "Sheldon", "Shep", "Sherb", "Shino", "Simon", "Skye", "Sly", "Snake", "Snooty", "Soleil", "Sparro", "Spike", "Spork", "Sprinkle", "Sprocket", "Static", "Stella", "Sterling", "Stinky", "Stitches", "Stu", "Sydney", "Sylvana", "Sylvia", "T-Bone", "Tabby", "Tad", "Tammi", "Tammy", "Tangy", "Tank", "Tasha", "Teddy", "Tex", "Tia", "Tiansheng", "Tiffany", "Timbra", "Tipper", "Tom", "Toby", "Truffles", "Tucker", "Tutu", "Twiggy", "Tybalt", "Ursala", "Velma", "Vesta", "Vic", "Victoria", "Violet", "Vivian", "Vladimir", "Wade", "Walker", "Walt", "Wart Jr.", "Weber", "Wendy", "Whitney", "Whitlow", "Willow", "Winnie", "Wolfgang", "Yuka", "Zell", "Zucker"];
+        const allVillagers = ["Ace", "Admiral", "Agent S", "Agnes", "Al", "Alfonso", "Alice", "Alli", "Amelia", "Anabelle", "Anchovy", "Angus", "Anicotti", "Ankha", "Annalisa", "Annalise", "Antonio", "Apollo", "Apple", "Astrid", "Audie", "Aurora", "Ava", "Avery", "Axel", "Azalea", "Baabara", "Bam", "Bangle", "Barold", "Bea", "Beardo", "Beau", "Becky", "Bella", "Benedict", "Benjamin", "Bertha", "Bettina", "Bianca", "Biff", "Big Top", "Bill", "Billy", "Biskit", "Bitty", "Blaire", "Blanche", "Bluebear", "Bob", "Bonbon", "Bones", "Boomer", "Boone", "Boots", "Boris", "Boyd", "Bree", "Broccolo", "Broffina", "Bruce", "Bubbles", "Buck", "Bud", "Bunnie", "Butch", "Buzz", "Cally", "Camofrog", "Canberra", "Candi", "Carmen", "Caroline", "Carrie", "Cashmere", "Celia", "Cephalobot", "Cesar", "Chadder", "Chai", "Charlise", "Cheri", "Cherry", "Chevre", "Chief", "Chops", "Chow", "Chrissy", "Claude", "Claudia", "Clay", "Cleo", "Clyde", "Coach", "Cobb", "Coco", "Cole", "Colton", "Cookie", "Cousteau", "Crackle", "Croque", "Cube", "Curlos", "Curly", "Curt", "Cyd", "Cyrano", "Daisy", "Deena", "Deirdre", "Deli", "Derwin", "Diana", "Diva", "Dizzy", "Dobie", "Doc", "Dom", "Dora", "Dotty", "Drago", "Drake", "Drift", "Ed", "Egbert", "Elise", "Ellie", "Eloise", "Elvis", "Erik", "Etoile", "Eugene", "Eunice", "Faith", "Fang", "Fauna", "Felicity", "Filbert", "Fillip", "Finley", "Flick", "Flora", "Flurry", "Francine", "Frank", "Freckles", "Freya", "Friga", "Frita", "Frobert", "Fuchsia", "Gabi", "Gala", "Gaston", "Gayle", "Genji", "Gigi", "Gladys", "Gloria", "Goldie", "Gonzo", "Goose", "Graham", "Greta", "Grizzly", "Groucho", "Gruff", "Gwen", "Hamlet", "Hamphrey", "Hans", "Harry", "Hazel", "Henry", "Hippeux", "Hopkins", "Hopper", "Hornsby", "Huck", "Hugh", "Iggly", "Ike", "Ione", "Jacob", "Jacques", "Jambette", "Jay", "Jeremiah", "Jitters", "Joey", "Judy", "Julia", "Julian", "June", "Kabuki", "Katt", "Keaton", "Ken", "Ketchup", "Kevin", "Kid Cat", "Kidd", "Kiki", "Kitt", "Kitty", "Klaus", "Knox", "Kody", "Kyle", "Leonardo", "Leopold", "Lily", "Limberg", "Lionel", "Lobo", "Lolly", "Lopez", "Louie", "Lucha", "Lucky", "Lulu", "Lyman", "Mac", "Maddie", "Maelle", "Maggie", "Mallary", "Maple", "Marcel", "Marcie", "Margie", "Marina", "Marshal", "Mary", "Mathilda", "Megan", "Melba", "Merengue", "Merry", "Midge", "Mint", "Mira", "Miranda", "Mitzi", "Moe", "Molly", "Monique", "Monty", "Moose", "Mott", "Muffy", "Murphy", "Nan", "Nana", "Naomi", "Nate", "Nibbles", "Norma", "O'Hare", "Octavian", "Olaf", "Olive", "Olivia", "Opal", "Ozzie", "Pancetti", "Pango", "Paolo", "Papi", "Pashmina", "Pate", "Patty", "Paula", "Peaches", "Peanut", "Pecan", "Peck", "Peewee", "Peggy", "Pekoe", "Penelope", "Petri", "Phoebe", "Pierce", "Pietro", "Pinky", "Piper", "Pippy", "Plucky", "Pompom", "Poppy", "Portia", "Prince", "Puck", "Puddles", "Pudge", "Punchy", "Purrl", "Queenie", "Quillson", "Quinn", "Raddle", "Rasher", "Raymond", "Renée", "Reneigh", "Rex", "Rhonda", "Ribbot", "Ricky", "Rilla", "Rizzo", "Roald", "Robin", "Rocco", "Rocket", "Rod", "Rodeo", "Rodney", "Rolf", "Rooney", "Rory", "Roscoe", "Rosie", "Rowan", "Ruby", "Rudy", "Sasha", "Sally", "Samson", "Sandy", "Sandy", "Savannah", "Scoot", "Shari", "Sheldon", "Shep", "Sherb", "Shino", "Simon", "Skye", "Sly", "Snake", "Snooty", "Soleil", "Sparro", "Spike", "Spork", "Sprinkle", "Sprocket", "Static", "Stella", "Sterling", "Stinky", "Stitches", "Stu", "Sydney", "Sylvana", "Sylvia", "T-Bone", "Tabby", "Tad", "Tammi", "Tammy", "Tangy", "Tank", "Tasha", "Teddy", "Tex", "Tia", "Tiansheng", "Tiffany", "Timbra", "Tipper", "Tom", "Toby", "Truffles", "Tucker", "Tutu", "Twiggy", "Tybalt", "Ursala", "Velma", "Vesta", "Vic", "Victoria", "Violet", "Vivian", "Vladimir", "Wade", "Walker", "Walt", "Wart Jr.", "Weber", "Wendy", "Whitney", "Whitlow", "Willow", "Winnie", "Wolfgang", "Yuka", "Zell", "Zucker"];
 
         let state = { excluded: [], grid: [] };
 
@@ -180,7 +158,7 @@
         }
 
         function init() {
-            const saved = localStorage.getItem('acnh_bingo_final_vInternalOnly');
+            const saved = localStorage.getItem('acnh_bingo_final_vVillagerImages');
             if (saved) { state = JSON.parse(saved); renderAll(); } 
             else { generateNewGrid(); }
             const datalist = document.getElementById('villagerNames');
@@ -189,7 +167,7 @@
             });
         }
 
-        function save() { localStorage.setItem('acnh_bingo_final_vInternalOnly', JSON.stringify(state)); }
+        function save() { localStorage.setItem('acnh_bingo_final_vVillagerImages', JSON.stringify(state)); }
 
         const input = document.getElementById('excludeInput');
         input.addEventListener('keypress', (e) => {
@@ -234,14 +212,16 @@
                 if (cell.isFree) {
                     card.innerHTML = `<div class="free-space-text">FREE<br>SPACE</div>`;
                 } else {
-                    // DIRECT PATH: /Villagers/VillagerName/Photo Image.png
-                    // We must encode the villager folder name and the filename
-                    const folderName = encodeURIComponent(cell.name);
-                    const fileName = encodeURIComponent("Photo Image.png");
-                    const imgSrc = `Villagers/${folderName}/${fileName}`;
+                    // Correct Folder Path: Villager Images/Villager Name/Photo Image.png
+                    const parentFolder = encodeURIComponent("Villager Images");
+                    const villagerFolder = encodeURIComponent(cell.name);
+                    const photoName = encodeURIComponent("Photo Image.png");
+                    const imgSrc = `${parentFolder}/${villagerFolder}/${photoName}`;
 
                     card.innerHTML = `
-                        <img class="villager-img" src="${imgSrc}">
+                        <img class="villager-img" src="${imgSrc}" 
+                             onerror="console.log('Path fail:', this.src); this.style.display='none'; this.nextElementSibling.style.display='block';">
+                        <div style="display:none; font-size:2rem;">🍃</div>
                         <div class="villager-name">${cell.name}</div>
                     `;
                 }
